--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,7 +74,7 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:configChanges="orientation|keyboardHidden|screenSize"/>
 
-        <activity android:name=".ui.activity.ViewPagerActivity"
+        <activity android:name=".ui.activity.KeyBoardActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
         <provider
