--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
+        android:label="${APP_NAME}"
         android:icon="@mipmap/app_logo"
         android:name=".app.MyApplication"
         android:networkSecurityConfig="@xml/network_security_config"
-        tools:replace="android:networkSecurityConfig"
+        tools:replace="android:networkSecurityConfig,android:label"
         android:requestLegacyExternalStorage="true"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
