--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -86,7 +86,8 @@
         <activity android:name=".ui.activity.StartTypeOneActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity"/>
-
+        <activity android:name=".ui.activity.TxPlayActivity" />
+        <activity android:name=".ui.activity.VideoRecordActivity" />
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.congda.tianjianxin.fileprovider"
