--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
+    compileSdkVersion 31
     buildToolsVersion "29.0.3"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -35,7 +35,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-    api 'com.android.support:recyclerview-v7:29.0.0'
+    api 'com.android.support:recyclerview-v7:31.0.0'
     //网络请求
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'io.reactivex.rxjava2:rxjava:2.2.10'
@@ -77,7 +77,7 @@ dependencies {
     api 'com.youth.banner:banner:2.0.8'
     api 'androidx.viewpager2:viewpager2:1.0.0'
     //baseAdapter
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.0-beta2'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.10'
     //指示器
     api 'com.github.hackware1993:MagicIndicator:1.5.0'
     //高仿iosbutton
